# aktivist-skrepr

./: .env.sample  .gitignore  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish-pages.yml  python-ci.yml
docs/: index.html
scripts/: generate_docs.py  setup_env.ps1
src/aktivist_skrepr/: cli.py  edesky_client.py  fetcher.py  filterer.py  uploader.py
src/aktivist_skrepr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_edesky_client.py  test_fetcher.py  test_filterer.py  test_generate_docs.py
